@@ -1,3 +1,7 @@
+Thu Apr  6 17:24:19 CEST 2006 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/algos2d/Initial.java:  Detect boundary intersection.
+
 Thu Mar 23 15:36:46 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/mesher/algos1d/UniformLengthDeflection.java: Apply the same change as in UniformLength.
